config/instances/manuela-mcs-quickstart/line-application/line-dashboard-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: line-dashboard
spec:
  host: line-dashboard-manuela-lineapp-mcs.apps-crc.testing
