config/instances/manuela-mcs-quickstart/line-application/messaging-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: messaging
spec:
  host: messaging-manuela-lineapp-mcs.apps-crc.testing
